# autoit-js

./: .gitignore  .prettierrc  CMakeLists.txt  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
scripts/: gen-source-files.js  list-source-files.js  scratch-pad.ts
src/: constants.h  impl-count.test.ts  lib.cpp  macros.h  main.ts  util.cpp  util.h  validators.cpp  validators.h
src-old/util/: data-type.ts  index.ts
src/auotit/: LICENSE
src/autoit/: autoit.ts  types.ts
src/bindings/: auto_it_set_option.cpp  autoitx3.h  bindings.h  clip_get.cpp  clip_put.cpp  control_click.cpp  control_click_by_handle.cpp  control_command.cpp  control_command_by_handle.cpp  control_disable.cpp  control_disable_by_handle.cpp  control_enable.cpp  control_enable_by_handle.cpp  control_focus.cpp  control_focus_by_handle.cpp  control_get_focus.cpp  control_get_focus_by_handle.cpp  control_get_handle.cpp  control_get_handle_as_text.cpp  control_get_pos.cpp  control_get_pos_by_handle.cpp  control_get_text.cpp  control_get_text_by_handle.cpp  control_hide.cpp  control_hide_by_handle.cpp  control_list_view.cpp  control_list_view_by_handle.cpp  control_move.cpp  control_move_by_handle.cpp  control_send.cpp  control_send_by_handle.cpp  control_set_text.cpp  control_set_text_by_handle.cpp  control_show.cpp  control_show_by_handle.cpp  control_tree_view.cpp  control_tree_view_by_handle.cpp  drive_map_add.cpp  drive_map_del.cpp  drive_map_get.cpp  (+78 more)
src/util/: data-type.ts  index.ts  library.ts  logger.test.ts  logger.ts  native.ts  windows-types.ts
(+2 files in other folders)
